--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
         <%= link_to "Add Flat", new_flat_path, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <form class="form-inline my-2 my-lg-0" action="/flats">
+            <input class="form-control mr-sm-2" name="query" type="search" placeholder="Search" value="<%= params[:query] %>">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
